# Semantic-VAD

./: .gitignore  CLAUDE.md  INTEGRATION.md  README.md  dataset_analysis.ipynb  pyproject.toml  requirements.txt  setup.sh  train.sh
app/: gradio_app.py
deploy/: pod_bench2.py  pod_build.sh  pod_finalize.py  pod_launch.sh  pod_ms_redo.sh  pod_ms_split.py  pod_ms_verify.py  pod_scale.py  pod_scale.sh  pod_scale_big.py  pod_setup.sh  pod_split.py  pod_verify.py  pod_verify.sh  runpod_ctl.py  train_qwen3.sh
scripts/: benchmark_eot.py  benchmark_eot_qwen3_head.py  benchmark_latency.py  benchmark_latency_qwen3.py  benchmark_latency_qwen3_head.py  duration_bias_check.py  preview_telephony_degrade.py  smoke_test.py  train_smoke_test.py
semantic_vad/: README.md  __init__.py  analyze.py  audio.py  build.py  malaysian_audio.py  parsers.py  schema.py  sources.py  turns.py
semantic_vad/training/: __init__.py  data.py  modeling.py  packing.py  prompt.py  train.py
semvad/: data.py  degrade.py  eot_adapter.py  metrics.py  modeling.py  train.py
tests/: fixtures.py  test_analyze.py  test_build.py  test_parsers.py  test_training.py  test_turns.py
whisper_qwen3_head/: data.py  modeling.py  profiling.py  prompt.py  train.py
