[project]
name = "semantic-vad"
version = "0.1.0"
description = "Build eot-bench-compatible end-of-turn (semantic VAD) datasets from forced alignments"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "datasets>=2.19",
    "pyarrow",
    "numpy",
    "soundfile",
    "huggingface_hub",
]

[project.optional-dependencies]
dev = ["pytest"]
malaysian = ["remotezip"]   # read Malaysian-STT audio from remote zip archives
# Train the Whisper-encoder -> adapter -> Qwen3 EOT model (GPU pod only; see README).
# flash-attn is installed separately (`pip install flash-attn --no-build-isolation`) since
# it needs a CUDA toolchain matched to the installed torch.
train = [
    "torch",
    "transformers>=4.51",   # Qwen3 + FlashAttentionKwargs (cu_seq_lens varlen) support
    "accelerate",
    "liger-kernel",
]

[project.scripts]
svad-build = "semantic_vad.build:main"
svad-analyze = "semantic_vad.analyze:main"
svad-train = "semantic_vad.training.train:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["semantic_vad", "semantic_vad.training"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
